completed IQBDA part 3

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link href="base.css" media="screen" rel="stylesheet" type="text/css" />
  </head>
  <body>
-  <div id="masthead">
-   <div id="header">
+  <div id="page-wrapper"></div>
+   <div id="masthead">
     <img height="60" src="Skittles.gif" alt="skittles" width="102" /><b> <i> </i></b>
     <h1>
      IQBDA</h1>
@@ -20,6 +20,9 @@
       <a href="index.html">Home</a></li>
      <li>
       <a href="iqbdc.html">IQBDC</a></li>
+      <li>
+      <a href="member.html">Become a Member</a>
+      </li>
     </ul>
    </div>
    <hr />
@@ -37,7 +40,7 @@
     <h2>
      Membership</h2>
     <p>
-     IQBDA currently has one member, but is actively seeking <a href="#" onclick="javascript:alert('Coming soon!')">new members</a> with this website.</p>
+     IQBDA currently has one member, but is actively seeking <a href="member.html">new members</a> with this website.</p>
     <h2>
      Activities</h2>
     <p>
